Menial component updates - mostly import items

--- a/.gitignore
+++ b/.gitignore
@@ -55,10 +55,10 @@ typings/
 .yarn-integrity
 
 # dotenv environment variables file
-.env
-.vscode
-.rest
-.http
+*.env
+*.vscode
+*.rest
+*.http
 
 .cache/
 public
