--- a/.gitignore
+++ b/.gitignore
@@ -4,11 +4,10 @@ node_modules
 .cache/
 
 # Build directory
-public/*
+*public/**
 static/admin/*.bundle.*
 .DS_Store
 yarn-error.log
 
 # Environment Files
-.vscode
 .env
