--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
   "scripts": {
     "develop": "gatsby develop",
     "build": "gatsby build",
-    "serve": "gatsby serve",
-    "react-devtools": "react-devtools"
+    "serve": "gatsby serve"
   },
   "dependencies": {
     "bootstrap": "^4.1.3",
