--- a/jsconfig.json
+++ b/jsconfig.json
@@ -2,6 +2,9 @@
   "compilerOptions": {
     "target": "ES6"
   },
+  "include": [
+    "src/**/*"
+  ],
   "exclude": [
     "node_modules",
     "**/node_modules/*"
