--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "reactstrap": "^6.5.0"
   },
   "devDependencies": {
+    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
     "babel-eslint": "^10.0.1",
     "eslint": "^5.12.1",
     "eslint-config-standard": "^12.0.0",
